--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "rimraf": "^3.0.2",
     "standard-version": "^9.5.0",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "ts-advanced-types": "^1.0.0"
   }
 }
