--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
   "types": "dist/index.d.ts",
   "files": [
     "dist/",
-    "docs/"
+    "docs/",
+    "README.md"
   ],
   "scripts": {
-    "prepare": "husky install",
+    "build": "npm run create-index; npm run ts:build",
+    "create-index": "npx ctix single -p ./tsconfig.json -v -m -r -x --useUpperFirst",
+    "prepare": "npx husky install",
     "release-rc": "npm run release -- --prerelease rc",
     "release": "npx standard-version",
     "hook:commit-msg": "npx --no -- commitlint --edit $1",
     "hook:pre-commit": "npm run lint; npm run ts:lint",
-    "lint": "eslint ./src/*.{ts,js} --format stylish",
+    "lint": "eslint ./src/*.ts --format stylish",
     "ts:lint": "tsc --noEmit",
     "ts:build": "rimraf dist; mkdir dist; tsc"
   },
@@ -48,6 +51,7 @@
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
+    "ctix": "^0.6.0",
     "eslint": "^8.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -59,6 +63,8 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "bson": "^4.7.0",
+    "mongodb": "^4.12.1",
     "ts-advanced-types": "^1.0.0"
   }
 }
