--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,13 +9,14 @@
     "package.json"
   ],
   "compilerOptions": {
+    "rootDir": "./src",
     "esModuleInterop": true,
     "noImplicitAny": false,
     "outDir": "./dist",
     "declaration": true,
     "inlineSourceMap": true,
     "noEmitOnError": true,
-    "removeComments": true,
+    "removeComments": false,
     "module": "CommonJS",
     "moduleResolution": "Node",
     "lib": [
