--- a/package.json
+++ b/package.json
@@ -63,7 +63,9 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "ajv": "^8.11.2",
     "bson": "^4.7.0",
+    "jsonpatch-to-mongodb": "^1.0.0",
     "mongodb": "^4.12.1",
     "ts-advanced-types": "^1.0.0"
   }
