--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "hook:pre-commit": "npm run lint; npm run ts:lint",
     "lint": "eslint ./src/*.ts --format stylish",
     "ts:lint": "tsc --noEmit",
-    "ts:build": "rimraf dist; mkdir dist; tsc"
+    "ts:build": "rimraf dist; mkdir dist; tsc",
+    "test": "npx jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@jest/globals": "^29.3.1",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
@@ -60,6 +62,7 @@
     "husky": "^8.0.2",
     "rimraf": "^3.0.2",
     "standard-version": "^9.5.0",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   },
   "dependencies": {
