feat(TsEdPlugin): ✨ introduces TsEdPlugin
Redefines the way of passing custom plugins in MongoRepository initialization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
 	"conventionalCommits.emojiFormat": "emoji",
 	"conventionalCommits.scopes": [
 		"JsonSchemaValidationPlugin",
-		"OnlineArchivePlugin"
+		"OnlineArchivePlugin",
+		"TsEdPlugin"
 	]
 }
