--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@jest/globals": "^29.3.1",
+    "@tsed/schema": "^7.10.1",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
