feat: major refactor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,10 @@
 	},
 	"conventionalCommits.emojiFormat": "emoji",
 	"conventionalCommits.scopes": [
-		"JsonSchemaValidationPlugin",
-		"OnlineArchivePlugin",
-		"TsEdPlugin"
+		"core",
+		"json-schema",
+		"mongobubble",
+		"online-archive",
+    "tsed"
 	]
 }
