--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mongobubble/core",
-  "version": "1.1.1",
+  "version": "2.0.2",
   "description": "The lite and unopinonated version of MongoBubble (https://github.com/ggondim/mongobubble.git)",
   "readme": "README.md",
   "main": "dist/index.js",
@@ -43,9 +43,10 @@
   },
   "homepage": "https://github.com/ggondim/mongobubble#readme",
   "dependencies": {
-    "bson": "^5.4.0",
+    "ajv": "^8.12.0",
+    "bson": "^6.0.0",
     "jsonpatch-to-mongodb": "^1.0.0",
-    "mongodb": "^5.8.1",
+    "mongodb": "^6.0.0",
     "ts-advanced-types": "^1.0.0"
   }
 }
