--- a/packages/validator-tsed/package.json
+++ b/packages/validator-tsed/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@mongobubble/json-schema",
-  "version": "1.0.1",
-  "description": "JsonSchemaValidationPlugin for MongoBubble (https://github.com/ggondim/mongobubble.git)",
+  "name": "@mongobubble/validator-tsed",
+  "version": "1.0.2",
+  "description": "Ts.ED JSON Schema validator for MongoBubble (https://github.com/ggondim/mongobubble.git)",
   "readme": "README.md",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -42,9 +42,10 @@
   },
   "homepage": "https://github.com/ggondim/mongobubble#readme",
   "dependencies": {
-    "@mongobubble/core": "^1.1.1",
+    "@mongobubble/core": "2.0.2",
+    "@tsed/schema": "^7.50.0",
     "ajv": "^8.12.0",
     "ajv-bsontype": "^1.0.7",
-    "bson": "^5.4.0"
+    "ajv-keywords": "^5.1.0"
   }
 }
