--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mongobubble/core",
-  "version": "2.0.3",
+  "version": "2.1.0",
   "description": "The lite and unopinonated version of MongoBubble (https://github.com/ggondim/mongobubble.git)",
   "readme": "README.md",
   "main": "dist/index.js",
@@ -44,6 +44,7 @@
   "homepage": "https://github.com/ggondim/mongobubble#readme",
   "dependencies": {
     "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "bson": "^6.2.0",
     "jsonpatch-to-mongodb": "^1.0.0",
     "mongodb": "^6.3.0",
